--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,24 +1,33 @@
+---
+import "../styles/global.css";
+import "aos/dist/aos.css";
+---
+
 <!doctype html>
 <html lang="es">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Optarys</title>
-	</head>
-	<body>
-		<slot />
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="generator" content={Astro.generator} />
+    <title>Optarys</title>
+  </head>
+  <body>
+    <slot />
+  </body>
 </html>
+<script>
+  import AOS from "aos";
+  AOS.init();
+</script>
+<script>
+  document.addEventListener("DOMContentLoaded", () => {
+    const navbar = document.getElementById("navbar-container");
 
-<style>
-	html,
-	body {
-			margin: 0;
-			width: 100%;
-			height: 100%;
-			/* leave space at top for fixed navbar */
-			padding-top: 2%
-		}
-</style>
+    window.addEventListener("scroll", () => {
+      window.scrollY > 10
+        ? navbar!.classList.add("shadow-md")
+        : navbar!.classList.remove("shadow-md");
+    });
+  });
+</script>
