Fix padding on Banner layout

--- a/src/components/Banner.astro
+++ b/src/components/Banner.astro
@@ -3,9 +3,9 @@ import BannerImg from "../assets/images/banner.png";
 ---
 
 <header
-  class="container px-6 mx-auto py-10 flex flex-col lg:flex-row items-center justify-between"
+  class="container px-6 mx-auto py-10 flex flex-col lg:flex-row items-center justify-between md:pt-24 lg:pt-32"
 >
-  <div class='lg:w-1/2" md:pt-24 lg:pt-32'>
+  <div class="lg:w-1/2">
     <div class="w-full space-y-6">
       <h1 class="w-4/4 md:w-2/3 text-5xl md:text-6xl font-medium">
         Impulsa tu negocio al siguiente nivel
