--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import Analytics from "../components/Analytics.astro";
 import "../styles/global.css";
 import "aos/dist/aos.css";
 ---
@@ -16,10 +17,7 @@ import "aos/dist/aos.css";
     <slot />
   </body>
 </html>
-<script>
-  import AOS from "aos";
-  AOS.init();
-</script>
+<Analytics />
 <script>
   document.addEventListener("DOMContentLoaded", () => {
     const navbar = document.getElementById("navbar-container");
@@ -30,4 +28,7 @@ import "aos/dist/aos.css";
         : navbar!.classList.remove("shadow-md");
     });
   });
+  
+  import AOS from "aos";
+  AOS.init();
 </script>
