--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,1 +1,105 @@
+---
+import optarysLogo from "../assets/logo-white.svg";
+import Button from "./Button.astro";
+---
 
+<footer class="mx-auto container px-0 lg:px-8 pt-12 text-white">
+  <div class="bg-[#191A23] rounded-0 lg:rounded-t-3xl px-15 py-15">
+    <div
+      class="col-1 flex flex-col lg:flex-row gap-8 justify-between items-center"
+    >
+      <div class="logo">
+        <img alt="logo-image" src={optarysLogo.src} width="180" height="30" />
+      </div><div
+        class="links flex flex-col lg:flex-row text-center gap-4 lg:gap-8"
+      >
+        <ul>
+            <li class="underline"><a href="#about-us">Nosotros</a></li></ul><ul>
+          <li class="underline"><a href="#services">Servicios</a></li>
+        </ul><ul>
+          <li class="underline"><a href="#use-cases">Casos de uso</a></li>
+        </ul><ul>
+          <li class="underline"><a href="#pricing">Pricing</a></li>
+        </ul><ul><li class="underline"><a href="#blog">Blog</a></li></ul>
+      </div><div class="icons space-x-4">
+        <button class="cursor-pointer rounded-full bg-[#F3F3F3] p-2"
+          ><svg
+            stroke="currentColor"
+            fill="currentColor"
+            stroke-width="0"
+            viewBox="0 0 448 512"
+            class="text-[#191A23]"
+            height="1em"
+            width="1em"
+            xmlns="http://www.w3.org/2000/svg"
+            ><path
+              d="M100.28 448H7.4V148.9h92.88zM53.79 108.1C24.09 108.1 0 83.5 0 53.8a53.79 53.79 0 0 1 107.58 0c0 29.7-24.1 54.3-53.79 54.3zM447.9 448h-92.68V302.4c0-34.7-.7-79.2-48.29-79.2-48.29 0-55.69 37.7-55.69 76.7V448h-92.78V148.9h89.08v40.8h1.3c12.4-23.5 42.69-48.3 87.88-48.3 94 0 111.28 61.9 111.28 142.3V448z"
+            ></path></svg
+          ></button
+        ><button class="cursor-pointer rounded-full bg-[#F3F3F3] p-2"
+          ><svg
+            stroke="currentColor"
+            fill="currentColor"
+            stroke-width="0"
+            viewBox="0 0 320 512"
+            class="text-[#191A23]"
+            height="1em"
+            width="1em"
+            xmlns="http://www.w3.org/2000/svg"
+            ><path
+              d="M279.14 288l14.22-92.66h-88.91v-60.13c0-25.35 12.42-50.06 52.24-50.06h40.42V6.26S260.43 0 225.36 0c-73.22 0-121.08 44.38-121.08 124.72v70.62H22.89V288h81.39v224h100.17V288z"
+            ></path></svg
+          ></button
+        ><button class="cursor-pointer rounded-full bg-[#F3F3F3] p-2"
+          ><svg
+            stroke="currentColor"
+            fill="currentColor"
+            stroke-width="0"
+            viewBox="0 0 512 512"
+            class="text-[#191A23]"
+            height="1em"
+            width="1em"
+            xmlns="http://www.w3.org/2000/svg"
+            ><path
+              d="M459.37 151.716c.325 4.548.325 9.097.325 13.645 0 138.72-105.583 298.558-298.558 298.558-59.452 0-114.68-17.219-161.137-47.106 8.447.974 16.568 1.299 25.34 1.299 49.055 0 94.213-16.568 130.274-44.832-46.132-.975-84.792-31.188-98.112-72.772 6.498.974 12.995 1.624 19.818 1.624 9.421 0 18.843-1.3 27.614-3.573-48.081-9.747-84.143-51.98-84.143-102.985v-1.299c13.969 7.797 30.214 12.67 47.431 13.319-28.264-18.843-46.781-51.005-46.781-87.391 0-19.492 5.197-37.36 14.294-52.954 51.655 63.675 129.3 105.258 216.365 109.807-1.624-7.797-2.599-15.918-2.599-24.04 0-57.828 46.782-104.934 104.934-104.934 30.213 0 57.502 12.67 76.67 33.137 23.715-4.548 46.456-13.32 66.599-25.34-7.798 24.366-24.366 44.833-46.132 57.827 21.117-2.273 41.584-8.122 60.426-16.243-14.292 20.791-32.161 39.308-52.628 54.253z"
+            ></path></svg
+          ></button
+        >
+      </div>
+    </div><div
+      class="col-2 py-15 flex flex-col lg:flex-row gap-5 items-center justify-between"
+    >
+      <div class="left space-y-5 text-center lg:text-start">
+        <div>
+          <div
+            class="flex flex-col lg:flex-row items-center lg:items-center gap-6 lg:gap-12 text-center lg:text-left"
+          >
+            <h1
+              class="text-black bg-[#B9FF66] px-4 py-1 text-2xl font-medium rounded-md w-fit mx-auto lg:mx-0"
+            >
+              Contactanos:
+            </h1><p class="max-w-2xl lg:max-w-xl mx-auto lg:mx-0"></p>
+          </div>
+        </div><p>Email: info@positivus.com</p><p>Phone: 555-567-8901</p><p>
+          Address: 1234 Main St <br />Moonstone City, Stardust State 12345
+        </p>
+      </div><div class="right flex bg-[#292A32] p-15 rounded-xl mt-5">
+        <form class="flex gap-8 flex-col lg:flex-row justify-between">
+          <input
+            placeholder="Email"
+            class="placeholder-white border border-white px-[15px] py-[10px] md:px-[22px] md:py-[15px] rounded-xl"
+            type="email"
+          /><button>
+                <Button variant="primary" hover="off">Subscribe</Button>
+            </button>
+        </form>
+      </div>
+    </div><hr class="my-8" /><div
+      class="col-3 flex flex-col lg:flex-row gap-3 lg:gap-8 text-center"
+    >
+      <h3>© 2025 Optarys. Todos los derechos reservados.</h3><h3 class="underline">
+        Politica de privacidad
+      </h3>
+    </div>
+  </div>
+</footer>
