--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,6 @@
 ---
 import Analytics from "../components/Analytics.astro";
-import "../styles/global.css";
-import "aos/dist/aos.css";
+import SeoOg from "../components/SeoOg.astro";
 ---
 
 <!doctype html>
@@ -10,25 +9,12 @@ import "aos/dist/aos.css";
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" href="/favicon.ico" />
-    <meta name="generator" content={Astro.generator} />
+    <SeoOg image="https://optarys.com/og-image.jpg" />
     <title>Optarys</title>
   </head>
   <body>
     <slot />
+    <Analytics />
+    <script src="../scripts/main.js"></script>
   </body>
 </html>
-<Analytics />
-<script>
-  document.addEventListener("DOMContentLoaded", () => {
-    const navbar = document.getElementById("navbar-container");
-
-    window.addEventListener("scroll", () => {
-      window.scrollY > 10
-        ? navbar!.classList.add("shadow-md")
-        : navbar!.classList.remove("shadow-md");
-    });
-  });
-  
-  import AOS from "aos";
-  AOS.init();
-</script>
