--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,7 @@ import ImgService1 from "../assets/images/card-image-2-CGzTEgpV.png";
 import ImgService2 from "../assets/images/card-image-6-BadEZ5Nh.png";
 import ImgService3 from "../assets/images/card-image-3-LkxHigZE.png";
 import Banner from "../components/Banner.astro";
+import Footer from "../components/Footer.astro";
 
 const services = [
   {
@@ -89,5 +90,6 @@ const services = [
         </div>
       </div>
     </section>
+    <Footer />
   </main>
 </Layout>
